--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ACLOCAL_AMFLAGS=-I m4
 lib_LTLIBRARIES = libinterflop_checkfloatmax.la
 
-libinterflop_checkfloatmax_la_SOURCES = interflop_check_float_max.cxx
+libinterflop_checkfloatmax_la_SOURCES = interflop_checkfloatmax.cxx
 libinterflop_checkfloatmax_la_CFLAGS = -fno-stack-protector -fPIC
 libinterflop_checkfloatmax_la_CXXFLAGS = -fno-stack-protector -fPIC
 
@@ -12,3 +12,4 @@ if LINK_INTERFLOP_STDLIB
 libinterflop_checkfloatmax_la_LIBADD = @INTERFLOP_STDLIB_PATH@/lib/libinterflop_stdlib.la
 endif
 libinterflop_checkfloatmax_la_includedir =$(includedir)/
+include_HEADERS = interflop_checkfloatmax.h
