--- a/Makefile.am
+++ b/Makefile.am
@@ -2,11 +2,11 @@ ACLOCAL_AMFLAGS=-I m4
 lib_LTLIBRARIES = libinterflop_checkfloatmax.la
 
 libinterflop_checkfloatmax_la_SOURCES = interflop_checkfloatmax.cxx
-libinterflop_checkfloatmax_la_CFLAGS = -fno-stack-protector -fPIC
-libinterflop_checkfloatmax_la_CXXFLAGS = -fno-stack-protector -fPIC
+libinterflop_checkfloatmax_la_CFLAGS = -fno-stack-protector
+libinterflop_checkfloatmax_la_CXXFLAGS = -fno-stack-protector
 
 if WALL_CFLAGS
-libinterflop_checkfloatmax_la_CFLAGS += -Wall -Wextra -Wno-varargs
+libinterflop_checkfloatmax_la_CFLAGS += -Wall -Wextra -Wno-varargs -Og -g
 endif
 if LINK_INTERFLOP_STDLIB
 libinterflop_checkfloatmax_la_LIBADD = @INTERFLOP_STDLIB_PATH@/lib/libinterflop_stdlib.la
